# xhtml-to-html

./: LICENSE  README.md  convert_xhtml.py  pyproject.toml
.github/workflows/: release.yml
src/xhtml_to_html/: __init__.py  __main__.py  converter.py  styles.py  utils.py
